# Aether

./: .gitignore  README.md  pyproject.toml
data/calibration/: home.json
data/ml/: synthetic.json
data/validation/: targets.json
docs/: api.md  benchmarks.md  calibration.md  foundations.md  implementation_summary.md  launch.md  ml.md  privacy.md  roadmap.md  security.md  spatial_mapping.md  testing.md  validation.md  viz.md
ml/pipelines/: train_regressor.py
scripts/: test_all.sh  test_websocket.py  validate.py
sdk/src/aether/: __init__.py  api.py  cli.py
sdk/src/aether/core/: __init__.py  csi.py  interface.py  linux.py  macos.py  simulated.py  windows.py
sdk/src/aether/mesh/: tracking.py  trilateration.py
sdk/src/aether/ml/: model.py
sdk/src/aether/sense/: collectors.py  engine.py  models.py  storage.py
sdk/src/aether/tools/: __init__.py  calibrate.py
sdk/src/aether/viz/: export.py  plots.py
services/api/: README.md  main.py
tests/: test_engine.py  test_mesh.py  test_platforms.py  test_sense.py  test_viz.py
tests/hil/: README.md
viz/web/: README.md  next.config.js  package-lock.json  package.json
viz/web/app/: page.tsx
viz/web/app/api/sample-devices/: route.ts
